@startuml nama "Sistem Manajemen Perpustakaan"
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 60
skinparam ranksep 60

' --- Interface & Abstract Classes ---
interface Borrowable <<Interface>> {
    + borrowItem(): void
    + returnItem(): void
}

abstract class LibraryItem <<Abstract>> {
    - id: String
    - title: String
    - isAvailable: boolean
    + {abstract} displayItemInfo(): void
}

abstract class Pengguna <<Abstract>> {
    - userId: String
    - nama: String
    + {abstract} displayInfo(): void
}

' --- Concrete Classes (Inheritance) ---
class Buku {
    - isbn: String
    - author: String
    + displayItemInfo(): void <<override>>
}

class Megazin {
    - issueNumber: int
    + displayItemInfo(): void <<override>>
}

class Anggota {
    - borrowedItemsCount: int
    + displayInfo(): void <<override>>
}

class Perpustakawan {
    - shift: String
    + displayInfo(): void <<override>>
}

' --- Transaction & Management Classes ---
class Pinjaman {
    - loanId: String
    - loanDate: Date
    - returnDate: Date
    + calculateFine(): double
}

class Perpustakaan {
    - nama: String
    + searchItem(title: String): LibraryItem <<overload>>
    + searchItem(title: String, author: String): LibraryItem <<overload>>
    + processLoan(member: Anggota, item: LibraryItem): void <<throws Exception>>
    + addItem(item: LibraryItem): void <<uses assertion>>
}

class ItemTidakTersediaException <<Exception>> {
    + ItemTidakTersediaException(message: String)
}

' --- Relationships ---

' Realization / Implementation
LibraryItem ..|> Borrowable

' Inheritance
Buku -up-|> LibraryItem
Megazin -up-|> LibraryItem
Anggota -up-|> Pengguna
Perpustakawan -up-|> Pengguna

' Aggregation (Perpustakaan memiliki Item, tapi Item bisa ada tanpa Perpustakaan)
Perpustakaan o--> "0..*" LibraryItem : manages >

' Composition (Pinjaman eksklusif milik Perpustakaan, Perpustakaan hancur Pinjaman hilang)
Perpustakaan *--> "0..*" Pinjaman : records >

' Association
Pinjaman --> "1" Anggota : borrowed by >
Pinjaman --> "1..*" LibraryItem : includes >

' Dependency for Exception
Perpustakaan ..> ItemTidakTersediaException : throws >
@enduml